@@ -2,6 +2,7 @@ CHANGELOG Roundcube Webmail
 ===========================
 
 - Enigma: Add possibility to configure gpg-agent binary location (enigma_pgp_agent)
+- Fix regression in resizing JPEG images with Imagick (#5376)
 
 RELEASE 1.2.1
 -------------
